# nvjpeg-torch

./: MANIFEST.in  Makefile  README.md  bundle_libs.py  nvjpeg-python.cpp  pyproject.toml  setup.py
include/: JpegCoder.hpp
nvjpeg/: __init__.py
src/x86/: JpegCoder.cpp
tests/: test-with-multiprocessing.py  test.py
